Fix `Unable to find JNA` error in buildSearchableOptions, runIde and tests. Again